// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MsgpackAdapter registering custom types registering custom type register that on msgpack as well 1`] = `
Object {
  "data": Array [
    215,
    16,
    64,
    89,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`MsgpackAdapter registering custom types registering custom types with normalization name disables it 1`] = `
Object {
  "data": Array [
    215,
    16,
    64,
    89,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`MsgpackAdapter serialization and deserialization primitives 1`] = `
Object {
  "data": Array [
    166,
    115,
    116,
    114,
    105,
    110,
    103,
  ],
  "type": "Buffer",
}
`;

exports[`MsgpackAdapter serialization and deserialization primitives 2`] = `
Object {
  "data": Array [
    192,
  ],
  "type": "Buffer",
}
`;

exports[`MsgpackAdapter serialization and deserialization primitives 3`] = `
Object {
  "data": Array [
    1,
  ],
  "type": "Buffer",
}
`;

exports[`MsgpackAdapter serialization and deserialization simple object 1`] = `
Object {
  "data": Array [
    132,
    163,
    102,
    111,
    111,
    163,
    98,
    97,
    114,
    164,
    100,
    97,
    116,
    101,
    215,
    255,
    206,
    59,
    105,
    0,
    91,
    145,
    100,
    70,
    163,
    110,
    117,
    109,
    1,
    164,
    110,
    117,
    108,
    108,
    192,
  ],
  "type": "Buffer",
}
`;
